tests/ui/impl-trait/in-trait/method-signature-matches.lower-impl-trait-in-trait-to-assoc-ty.stderr
error[E0053]: method `owo` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:11:15
   |
LL |     fn owo(_: u8) {}
   |               ^^
   |               |
   |               expected `()`, found `u8`
   |               help: change the parameter type to match the trait: `()`
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:7:15
   |
LL |     fn owo(x: ()) -> impl Sized;
   |               ^^
   = note: expected signature `fn(())`
              found signature `fn(u8)`

error[E0053]: method `owo` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:20:21
   |
LL |     async fn owo(_: u8) {}
   |                     ^^
   |                     |
   |                     expected `()`, found `u8`
   |                     help: change the parameter type to match the trait: `()`
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:16:21
   |
LL |     async fn owo(x: ()) {}
   |                     ^^
   = note: expected signature `fn(()) -> _`
              found signature `fn(u8) -> _`

error[E0053]: method `calm_down_please` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:29:46
   |
LL |     fn calm_down_please(_: (), _: (), _: ()) {}
   |                                              ^ incorrect number of function parameters
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:25:5
   |
LL |     fn calm_down_please() -> impl Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn()`
              found signature `fn((), (), ())`

error[E0053]: method `come_on_a_little_more_effort` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:38:39
   |
LL |     fn come_on_a_little_more_effort() {}
   |                                       ^ incorrect number of function parameters
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:34:5
   |
LL |     fn come_on_a_little_more_effort(_: (), _: (), _: ()) -> impl Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn((), (), ())`
              found signature `fn()`

error[E0053]: method `early` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:47:27
   |
LL |     fn early<'late, T>(_: &'late ()) {}
   |                     -     ^^^^^^^^^
   |                     |     |
   |                     |     expected type parameter `T`, found `()`
   |                     |     help: change the parameter type to match the trait: `&'early T`
   |                     this type parameter
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:43:28
   |
LL |     fn early<'early, T>(x: &'early T) -> impl Sized;
   |                            ^^^^^^^^^
   = note: expected signature `fn(&'early T)`
              found signature `fn(&())`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0053`.
